# gal

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
ci/: build-linux.sh  build-osx.sh
cmake/: glslc.cmake
cmake/Hunter/: config.cmake
cmake/toolchains/: clang-3.5.cmake  clang-3.6.cmake  clang-3.7.cmake  clang-3.8.cmake  clang-3.9.cmake  clang-4.0.cmake  clang-5.0.cmake  clang-6.0.cmake  clang-7.0.cmake  gcc-4.7.cmake  gcc-4.8.cmake  gcc-4.9.cmake  gcc-5.cmake  gcc-6.cmake  gcc-7.cmake  osx-10.10.cmake  osx-10.11.cmake  osx-10.12.cmake  osx-10.13.cmake
cmake/toolchains/common/: default.cmake  osx.cmake
src/shaders/: default.frag  default.vert
tools/scripts/: update_hunter_gate.sh
